feat(btn add): correcao do comportamento dos btns

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                                                 </div>
 
                                             </div>
-                                            <button class="uk-button uk-button-secondary add-bio">Adicionar</button>
+                                            <button class="uk-button uk-button-secondary add-bio" disabled>Adicionar</button>
                                         </div>
                                     </div>
                                 </div>
@@ -143,7 +143,7 @@
                                                     </div>
                                                 </div>
                                             </div>
-                                            <button class="uk-button uk-button-secondary add-link">Adicionar</button>
+                                            <button class="uk-button uk-button-secondary add-link" disabled>Adicionar</button>
                                         </div>
                                     </div>
                                 </div>
@@ -168,7 +168,7 @@
                                                     <input type="email" class="uk-input" id="beacons-email" placeholder="name@example.com">
                                                 </div>
                                             </div>
-                                            <button class="uk-button uk-button-secondary add-email">Adicionar</button>
+                                            <button class="uk-button uk-button-secondary add-email" disabled>Adicionar</button>
                                         </div>
                                     </div>
                                 </div>
@@ -193,7 +193,7 @@
                                                     <input type="email" class="uk-input" id="beacons-tweet" placeholder="@username">
                                                 </div>
                                             </div>
-                                            <button class="uk-button uk-button-secondary add-tweet">Adicionar</button>
+                                            <button class="uk-button uk-button-secondary add-tweet" disabled>Adicionar</button>
                                         </div>
                                     </div>
                                 </div>
@@ -223,7 +223,7 @@
                                                     <input type="text" class="uk-input" id="beacons-video" placeholder="YpkTADgjBas">
                                                 </div>
                                             </div>
-                                            <button class="uk-button uk-button-secondary add-video">Adicionar</button>
+                                            <button class="uk-button uk-button-secondary add-video" disabled>Adicionar</button>
                                         </div>
                                     </div>
                                 </div>
@@ -254,7 +254,7 @@
                                                     <input type="text" class="uk-input" id="beacons-music" placeholder="YpkTADgjBas">
                                                 </div>
                                             </div>
-                                            <button class="uk-button uk-button-secondary add-music">Adicionar</button>
+                                            <button class="uk-button uk-button-secondary add-music" disabled>Adicionar</button>
                                         </div>
                                     </div>
                                 </div>
@@ -296,7 +296,7 @@
                                                 </div>
 
                                                 <div class="chooseUrlBg uk-margin-top uk-hidden">
-                                                    <label for="backgroundUrl" class="uk-form-label uk-block">Adicionar URL</label>
+                                                    <label for="backgroundUrl" class="uk-form-label uk-block" disabled>Adicionar URL</label>
                                                     <div class="uk-form-controls">
                                                         <input type="text" class="uk-input" id="backgroundUrl" placeholder="https://">
                                                     </div>
