pequenos ajustes de estilo

--- a/index.html
+++ b/index.html
@@ -282,10 +282,10 @@
                                                 <div class="btn-group mb-3" role="group" aria-label="Basic radio toggle button group">
                                                     <form>
                                                         <input type="radio" class="uk-radio" name="btnradio" id="chooseFileBg" autocomplete="off" checked>
-                                                        <label class="uk-form-label uk-margin-small-right" for="chooseFileBg">Escolher Arquivo</label>
+                                                        <label class="uk-margin-right uk-form-label" for="chooseFileBg">Escolher Arquivo</label>
 
                                                         <input type="radio" class="uk-radio" name="btnradio" id="chooseUrlBg" autocomplete="off">
-                                                        <label class="uk-form-label uk-margin-small-right" for="chooseUrlBg">URL</label>
+                                                        <label class="uk-margin-right uk-form-label" for="chooseUrlBg">URL</label>
 
                                                         <input type="radio" class="uk-radio" name="btnradio" id="chooseColorBg" autocomplete="off">
                                                         <label class="uk-form-label" for="chooseColorBg">Cor</label>
